--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<body>
 		<header>
-		<h1 class="titulo_principal"> Barbearia Alura </h1>
+		<h1 class="titulo_principal"> Salão chique Alura </h1>
 		</header>
 
 		<img id="banner" src="banner.jpg">
